--- a/Knowledgebase/imageCompression.html
+++ b/Knowledgebase/imageCompression.html
@@ -595,32 +595,32 @@ kbd {
 
 <h2 id="toc_1">Side by side comparison</h2>
 
-<p><img src="assets/_media_comparison.png" alt="Original Image"></p>
+<p><img src="assets/media_comparison.png" alt="Original Image"></p>
 
 <h2 id="toc_2">Individual Photos, original size</h2>
 
-<p><img src="assets/_media_originalSize_IMG_0366.jpg" alt="Original Image">
-<img src="assets/_media_originalSize_IMG_0366_JPEGmini.jpg" alt="JPEGmini Image">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_100_fast.jpg" alt="Image Optim 100 - fast">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_70_fast.jpg" alt="Image Optim 70 - fast">
-<img src="assets/_media_originalSize_IMG_0366_imageOptim_40_fast.jpg" alt="Image Optim 40 - fast"></p>
+<p><img src="assets/media_originalSize_IMG_0366.jpg" alt="Original Image">
+<img src="assets/media_originalSize_IMG_0366_JPEGmini.jpg" alt="JPEGmini Image">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_100_fast.jpg" alt="Image Optim 100 - fast">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_70_fast.jpg" alt="Image Optim 70 - fast">
+<img src="assets/media_originalSize_IMG_0366_imageOptim_40_fast.jpg" alt="Image Optim 40 - fast"></p>
 
 <h2 id="toc_3">Individual Photos, iPad Pro 12.9&quot; size</h2>
 
-<p><img src="assets/_media_iPadProSize_IMG_0366.jpg" alt="Original Image">
-<img src="assets/_media_iPadProSize_IMG_0366_JPEGmini.jpg" alt="JPEGmini Image">
-<img src="assets/_media_iPadProSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
-<img src="assets/_media_iPadProSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
-<img src="assets/_media_iPadProSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane"></p>
+<p><img src="assets/media_iPadProSize_IMG_0366.jpg" alt="Original Image">
+<img src="assets/media_iPadProSize_IMG_0366_JPEGmini.jpg" alt="JPEGmini Image">
+<img src="assets/media_iPadProSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
+<img src="assets/media_iPadProSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
+<img src="assets/media_iPadProSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane"></p>
 
 <h2 id="toc_4">Individual Photos, iPhone7 Plus Sizes</h2>
 
-<p><img src="assets/_media_iPhone7PlusSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
-<img src="assets/_media_iPhone7PlusSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
-<img src="assets/_media_iPhone7PlusSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane"></p>
+<p><img src="assets/media_iPhone7PlusSize_IMG_0366_imageOptim_100_insane.jpg" alt="Image Optim 100 - insane">
+<img src="assets/media_iPhone7PlusSize_IMG_0366_imageOptim_70_insane.jpg" alt="Image Optim 70 - insane">
+<img src="assets/media_iPhone7PlusSize_IMG_0366_imageOptim_40_insane.jpg" alt="Image Optim 40 - insane"></p>
 
 
 
