--- a/index.html
+++ b/index.html
@@ -330,11 +330,13 @@ kbd {
 
 <h1 id="toc_0">RANDOMIZE USR 0</h1>
 
-<p>And so it all started...</p>
+<h2 id="toc_1">And so it all started... </h2>
 
-<p>This is a collection of small information posts that hopefully will be of interest.</p>
+<p>A random collection of posts... <a href="https://twitter.com/dayzrsm0ll">Reach me on Twitter - @dayzrsm0ll</a></p>
 
-<p><a href="Knowledgebase/imageCompression.html">JPEG Image Compression</a></p>
+<p>2017-01-31 - <a href="Knowledgebase/ffmpeg.html">FFmpeg &quot;Swiss Army Knife&quot;</a></p>
+
+<p>2017-01-31 - <a href="Knowledgebase/imageCompression.html">JPEG Image Compression</a></p>
 
 
 
