--- a/Knowledgebase/ffmpeg.html
+++ b/Knowledgebase/ffmpeg.html
@@ -340,13 +340,13 @@ kbd {
 
 <h3 id="toc_3">Reducing the file size - <a href="https://trac.ffmpeg.org/wiki/Encode/MP3">Addional MP3 encode info</a></h3>
 
-<p>For a file of 6.9 MByte</p>
+<p>For a file of 6.9 Mbyte</p>
 
 <p>The following command </p>
 
 <div><pre><code class="language-none">    ./ffmpeg -i sourceSound.mp3 -codec:a libmp3lame -qscale:a 8  output.mp3</code></pre></div>
 
-<p>will reduce it to 3.9 MByte. Different settings yeld the following file sizes</p>
+<p>will reduce it to 3.9 Mbyte. Different settings yield the following file sizes</p>
 
 <table>
 <thead>
