--- a/fun/iss.html
+++ b/fun/iss.html
@@ -16,7 +16,7 @@
 <p>My &quot;challenge&quot; here was actually to come up with a pretty map for representing the route instead of using an existing MAP API.</p>
 <p>I ended up using an Apple Pencil to contour a world map on top of a graphing paper background (I am a fan of graphing paper) (sorry for any inacuracies)</p>
 <p>There&#39;s a slight error due to the fact that I am not making any projection corrections.</p>
-<p><a href="code/iss_cassido.html">Check the ISS tracking webpage here</a></p>
+<p><a href="http://www.apedrofernandes.eu/iss_cassido/iss_cassido.html">Check the ISS tracking webpage here</a></p>
 <p>If you leave the webpage open for two to three hours you will get a plot similiar to the one below.</p>
 <p class="img-container"><img src="iss_sample.png" alt="ISS Location"></p>
     </article>
