--- a/fun/iss.html
+++ b/fun/iss.html
@@ -14,10 +14,10 @@
 <p>2018-03-12</p>
 <p>In response to @cassido challenge, I came up with a small JS that uses <a href="http://open-notify.org/Open-Notify-API/ISS-Location-Now/">Nathan Bergey API</a> to display the route of the ISS space station on a Map.</p>
 <p>My &quot;challenge&quot; here was actually to come up with a pretty map for representing the route instead of using an existing MAP API.</p>
-<p>I ended up using an Apple Pencil to contour a world map on top of a graphing paper background (I am a fan of graphing paper) (sorry for any inacuracies)</p>
+<p>I ended up using an Apple Pencil to contour a world map on top of a graphing paper background (I am a fan of graphing paper) (sorry for any inaccuracies)</p>
 <p>There&#39;s a slight error due to the fact that I am not making any projection corrections.</p>
-<p><a href="http://www.apedrofernandes.eu/iss_cassido/iss_cassido.html">Check the ISS tracking webpage here</a></p>
-<p>If you leave the webpage open for two to three hours you will get a plot similiar to the one below.</p>
+<p><a href="http://www.apedrofernandes.eu/iss_cassido/iss_cassido.html">Check the ISS tracking webpage here.</a></p>
+<p>If you leave the webpage open for two to three hours, you will get a plot similar to the one below.</p>
 <p class="img-container"><img src="iss_sample.png" alt="ISS Location"></p>
     </article>
   </body>
