--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </tbody>
 </table>
 <p>A random collection of posts... <a href="https://twitter.com/dayzrsm0ll">Twitter - @dayzrsm0ll</a></p>
-<a rel="me" href="https://mastodon.social/@pfernandes">Mastodon</a>
+      <p><a rel="me" href="https://mastodon.social/@pfernandes">Mastodon</a></p>
 <p>2018-03-19 - <a href="fun/overlap.html">Calculate area of overlap with a Monte Carlo simulation - @cassido challenge 2018-03-12</a></p>
 <p>2018-03-12 - <a href="fun/iss.html">ISS International Space Station Location - @cassido challenge 2018-03-06</a></p>
 <p>2017-02-11 - <a href="https://github.com/apfernandes/excelToMarkdown">Excel table to Markdown</a></p>
