--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </tbody>
 </table>
 <p>A random collection of posts...</p>
-<p><a hreft="https://github.com/apfernandes"></a></p>
+<p><a hreft="https://github.com/apfernandes">github</a></p>
 <p><a rel="me" href="https://mastodon.social/@pfernandes">Mastodon</a></p>
 <p><a href="https://twitter.com/dayzrsm0ll">Twitter - @dayzrsm0ll</a></p>
 <p>2018-03-19 - <a href="fun/overlap.html">Calculate area of overlap with a Monte Carlo simulation - @cassido challenge 2018-03-12</a></p>
