--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 <p><a href="https://github.com/apfernandes">github</a></p>
 <p><a rel="me" href="https://mastodon.social/@pfernandes">Mastodon</a></p>
 <p><a href="https://twitter.com/dayzrsm0ll">Twitter - @dayzrsm0ll</a></p>
-<p>2018-03-19 - <a href="fun/overlap.html">Calculate area of overlap with a Monte Carlo simulation - @cassido challenge 2018-03-12</a></p>
-<p>2018-03-12 - <a href="fun/iss.html">ISS International Space Station Location - @cassido challenge 2018-03-06</a></p>
-<p>2017-02-11 - <a href="https://github.com/apfernandes/excelToMarkdown">Excel table to Markdown</a></p>
-<p>2017-01-31 - <a href="Knowledgebase/ffmpeg.html">FFmpeg &quot;Swiss Army Knife&quot;</a></p>
-<p>2017-01-31 - <a href="Knowledgebase/imageCompression.html">JPEG Image Compression</a></p>
+      <p>There's nothing to see here right now. Move along</p>
     </article>
   </body>
 </html>
